Iniital setup with plain swoole and composer require mezzio-swoole

--- a/ops/envs/dev/comp/.dist.env
+++ b/ops/envs/dev/comp/.dist.env
@@ -1,1 +1,9 @@
-COMPOSE_PROJECT_NAME=evdobe-skeleton
+PROJECT_NAME=http-api-skeleton
+COMPOSE_PROJECT_NAME="$PROJECT_NAME"
+PROJECT_ORG=evdobe
+PROJECT_DESCRIPTION="An evdobe HTTP API skeleton project"
+PROJECT_AUTHORS="
+    Konstantinos Togias;info@ktogias.gr
+"
+TIME_ZONE=Europe/Athens
+HTTP_PORT=9501
