Setup with full mezzio and mezzio-swoole dependencies

--- a/dev/.gitignore
+++ b/dev/.gitignore
@@ -4,7 +4,11 @@
 # PHP-CS-Fixer
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
+/.phpcs-cache
 
 # PHPUnit
 /.phpunit.cache
 .phpunit.result.cache
+
+/clover.xml
+/coveralls-upload.json
