Added attachable dummy process and timer, and made HEALTCHECK_HTTP_PATH configurable through env

--- a/ops/envs/dev/comp/docker-compose.yaml
+++ b/ops/envs/dev/comp/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       PROJECT_DESCRIPTION: ${PROJECT_DESCRIPTION}
       PROJECT_AUTHORS: ${PROJECT_AUTHORS}
       HTTP_PORT: ${HTTP_PORT}
+      HEALTCHECK_HTTP_PATH: ${HEALTCHECK_HTTP_PATH}
       TZ: ${TIME_ZONE}
       AUTORELOAD_PROGRAMS: "swoole"
       AUTORELOAD_ANY_FILES: 0
