Added postgress db

--- a/ops/envs/dev/comp/.dist.env
+++ b/ops/envs/dev/comp/.dist.env
@@ -1,5 +1,5 @@
 PROJECT_NAME=http-api-skeleton
-COMPOSE_PROJECT_NAME="$PROJECT_NAME"
+COMPOSE_PROJECT_NAME=http-api-skeleton
 PROJECT_ORG=evdobe
 PROJECT_DESCRIPTION="An evdobe HTTP API skeleton project"
 PROJECT_AUTHORS="
@@ -8,3 +8,6 @@ PROJECT_AUTHORS="
 TIME_ZONE=Europe/Athens
 HTTP_PORT=9501
 HEALTCHECK_HTTP_PATH=/api/ping
+DB_NAME=apidb
+DB_USER=apidbuser
+DB_PASSWORD=apidbpass
