--- a/ops/envs/dev/comp/docker-compose.yaml
+++ b/ops/envs/dev/comp/docker-compose.yaml
@@ -13,9 +13,34 @@ services:
       TZ: ${TIME_ZONE}
       AUTORELOAD_PROGRAMS: "swoole"
       AUTORELOAD_ANY_FILES: 0
+      DB_NAME: "${DB_NAME}"
+      DB_USER: "${DB_USER}"
+      DB_PASSWORD: "${DB_PASSWORD}"
     expose: 
     - ${HTTP_PORT}
     ports: 
     - ${HTTP_PORT}:${HTTP_PORT}
     volumes:
     - ../../../../dev:/var/www
+    depends_on:
+      - db
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${HTTP_PORT}${HEALTCHECK_HTTP_PATH}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+  db:
+    build: ../cont/db
+    environment:
+      POSTGRES_PASSWORD: "${DB_PASSWORD}"
+      POSTGRES_USER: "${DB_USER}"
+      POSTGRES_DB: "${DB_NAME}"
+      POSTGRES_HOST_AUTH_METHOD: trust
+    expose:
+      - 5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: on-failure
