Integrated doctrine and implemented doctrine persistence adapter

--- a/ops/envs/dev/comp/.dist.env
+++ b/ops/envs/dev/comp/.dist.env
@@ -5,6 +5,7 @@ PROJECT_DESCRIPTION="An evdobe HTTP API skeleton project"
 PROJECT_AUTHORS="
     Konstantinos Togias;info@ktogias.gr
 "
+APPLICATION_ENVIRONMENT=dev
 TIME_ZONE=Europe/Athens
 HTTP_PORT=9501
 HEALTCHECK_HTTP_PATH=/api/ping
