Added MyAggregateByIdHandler and moved BASE_HTTP_PATH config to env

--- a/ops/envs/dev/comp/.dist.env
+++ b/ops/envs/dev/comp/.dist.env
@@ -8,7 +8,8 @@ PROJECT_AUTHORS="
 APPLICATION_ENVIRONMENT=dev
 TIME_ZONE=Europe/Athens
 HTTP_PORT=9501
-HEALTCHECK_HTTP_PATH=/api/ping
+BASE_HTTP_PATH=/api
+HEALTHCHECK_HTTP_PATH=/api/ping
 DB_NAME=apidb
 DB_USER=apidbuser
 DB_PASSWORD=apidbpass
