Added contracts and project events feature step definitions

--- a/ops/envs/dev/comp/docker-compose.yaml
+++ b/ops/envs/dev/comp/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
     - ${HTTP_PORT}:${HTTP_PORT}
     volumes:
     - ../../../../dev:/var/www
+    - ../../../../contracts:/contracts
     depends_on:
       - db
     healthcheck:
